--- a/funtome_features.html
+++ b/funtome_features.html
@@ -16,7 +16,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat+Subrayada:400,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style-funtome-features.css">
+    <link rel="stylesheet" href="css/features/style-funtome-features.css">
+    <link rel="stylesheet" href="css/features/media-funtome-features.css">
 
 
 </head>
@@ -33,8 +34,8 @@
                         <a href="/">
                             <img class="logo" src="img/logo_funtome.svg" alt="" />
                         </a>
-                        <a href="/">
-                            <img src="img/lang.svg" alt="" />
+                        <a class="local-switch" href="https://funtome.devzsg.net/en/">
+                            en
                         </a>
                     </div>
 
@@ -59,9 +60,15 @@
                     </div>
 
                     <div class="header-instal">
-                        <a href="#"><img class="instal-apple" src="img/icon/apple_icon.png" alt="" /></a>
-                        <a href="#"><img class="instal-google" src="img/icon/google_icon.png" alt="" /></a>
+                        <div class="instal-but">
+                            <a href="#"><img class="instal-apple" src="img/icon/apple_icon.svg" alt="" /></a>
+                            <a href="#"><img class="instal-google" src="img/icon/google_icon.svg" alt="" /></a>
+                        </div>
+                        <button class="burger" type="button" id="navToggle">
+                            <span class="burger__item">Menu</span>
+                        </button>
                     </div>
+
                 </div>
             </div>
         </header>
@@ -85,19 +92,22 @@
                 </div>
             </div>
 
-            <!--  <div class="icon-social">
-            <a href="#" class="icon-fixet">
-                <img src="img/icon/inst.png" alt="">
-            </a>
-            <a href="#" class="icon-fixet">
-                <img src="img/icon/facebook.png" alt="">
-            </a>
-            <a href="#" class="icon-fixet">
-                <img src="img/icon/vk.png" alt="">
-            </a>
-            <a href="#">
-                <img src="img/icon/youtube.png" alt="">
-            </a> -->
+            <!-- <div class="icon-social">
+
+                <a href="#" class="icon-fixet">
+                    <img src="img/icon/inst.png" alt="">
+                </a>
+                <a href="#" class="icon-fixet">
+                    <img src="img/icon/facebook.png" alt="">
+                </a>
+                <a href="#" class="icon-fixet">
+                    <img src="img/icon/vk.png" alt="">
+                </a>
+                <a href="#">
+                    <img src="img/icon/youtube.png" alt="">
+                </a>
+
+            </div> -->
         </div>
 
 
