--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                         <a href="/">
                             <img class="logo" src="img/logo_funtome.svg" alt="" />
                         </a>
-                        <a href="/">
-                            <img src="img/lang.svg" alt="" />
+                        <a class="local-switch" href="https://funtome.devzsg.net/en/">
+                            en
                         </a>
                     </div>
 
@@ -59,8 +59,13 @@
                     </div>
 
                     <div class="header-instal">
-                        <a href="#"><img class="instal-apple" src="img/icon/apple_icon.png" alt="" /></a>
-                        <a href="#"><img class="instal-google" src="img/icon/google_icon.png" alt="" /></a>
+                        <div class="instal-but">
+                            <a href="#"><img class="instal-apple" src="img/icon/apple_icon.svg" alt="" /></a>
+                            <a href="#"><img class="instal-google" src="img/icon/google_icon.svg" alt="" /></a>
+                        </div>
+                        <button class="burger" type="button" id="navToggle">
+                            <span class="burger__item">Menu</span>
+                        </button>
                     </div>
                 </div>
             </div>
