--- a/funtome_features.html
+++ b/funtome_features.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat+Subrayada:400,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/features/style-funtome-features.css">
     <link rel="stylesheet" href="css/features/media-funtome-features.css">
 
@@ -61,7 +62,7 @@
 
                     <div class="header-instal">
                         <div class="instal-but">
-                            <a href="#"><img class="instal-apple" src="img/icon/apple_icon.svg" alt="" /></a>
+                            <a href="#"><img class="instal-apple" src="img/icon/apple_icon.png" alt="" /></a>
                             <a href="#"><img class="instal-google" src="img/icon/google_icon.svg" alt="" /></a>
                         </div>
                         <button class="burger" type="button" id="navToggle">
@@ -121,12 +122,23 @@
                     <!--- Text Left -->
                     <div class="features-iteam">
                         <div class="features-photo">
-                            <img class="container-img-left" src="img/funtome-features/001.png" alt="">
+                            <img class="container-img-left" src="img/funtome-features/desc/001.png"
+                                data-type="desc"
+                                alt="features"
+                            >
+                            <img class="container-img-left" src="img/funtome-features/desc/001.png"
+                                data-type="tablet"
+                                alt="features"
+                            >
+                            <img class="container-img-left" src="img/funtome-features/mobile/001-mob-min.png"
+                                data-type="mobile"
+                                alt="features"
+                            >
                         </div>
                         <div class="features-content">
                             <div class="features-title">
                                 <div class="number-photo">
-                                    <img class="number" src="img/funtome-features/01.png" alt="">
+                                    <img class="number" src="img/funtome-features/number/01.png" alt="">
                                 </div>
                                 <div class="title">Профиль</div>
                             </div>
@@ -147,7 +159,7 @@
                         <div class="features-content">
                             <div class="features-title">
                                 <div class="number-photo">
-                                    <img class="number" src="img/funtome-features/02.png" alt="">
+                                    <img class="number" src="img/funtome-features/number/02.png" alt="">
                                 </div>
                                 <div class="title">Уровни и награды</div>
                             </div>
@@ -159,19 +171,41 @@
                             </div>
                         </div>
                         <div class="features-photo">
-                            <img class="container-img-right" src="img/funtome-features/002.png" alt="">
+                            <img class="container-img-right" src="img/funtome-features/desc/002.png"
+                                data-type="desc"
+                                alt="features"
+                            >
+                            <img class="container-img-right" src="img/funtome-features/desc/002.png"
+                                data-type="tablet"
+                                alt="features"
+                            >
+                            <img class="container-img-right" src="img/funtome-features/mobile/002-mob-min.png"
+                                data-type="mobile"
+                                alt="features"
+                            >
                         </div>
                     </div>
 
                     <!--- Text Left -->
                     <div class="features-iteam">
                         <div class="features-photo">
-                            <img class="container-img-left" src="img/funtome-features/003.png" alt="">
+                            <img class="container-img-left" src="img/funtome-features/desc/003.png"
+                                data-type="desc"
+                                alt="features"
+                            >
+                            <img class="container-img-left" src="img/funtome-features/desc/003.png"
+                                data-type="tablet"
+                                alt="features"
+                            >
+                            <img class="container-img-left" src="img/funtome-features/mobile/003-mob-min.png"
+                                data-type="mobile"
+                                alt="features"
+                            >
                         </div>
                         <div class="features-content">
                             <div class="features-title">
                                 <div class="number-photo">
-                                    <img class="number" src="img/funtome-features/03.png" alt="">
+                                    <img class="number" src="img/funtome-features/number/03.png" alt="">
                                 </div>
                                 <div class="title">Фанумы</div>
                             </div>
@@ -192,7 +226,7 @@
                         <div class="features-content">
                             <div class="features-title">
                                 <div class="number-photo">
-                                    <img class="number" src="img/funtome-features/04.png" alt="">
+                                    <img class="number" src="img/funtome-features/number/04.png" alt="">
                                 </div>
                                 <div class="title">Паки</div>
                             </div>
@@ -210,19 +244,41 @@
                             </div>
                         </div>
                         <div class="features-photo">
-                            <img class="container-img-right" src="img/funtome-features/004.png" alt="">
+                            <img class="container-img-right" src="img/funtome-features/desc/004.png"
+                                data-type="desc"
+                                alt="features"
+                            >
+                            <img class="container-img-right" src="img/funtome-features/desc/004.png"
+                                data-type="tablet"
+                                alt="features"
+                            >
+                            <img class="container-img-right" src="img/funtome-features/mobile/004-mob-min.png"
+                                data-type="mobile"
+                                alt="features"
+                            >
                         </div>
                     </div>
 
                     <!--- Text Left -->
                     <div class="features-iteam">
                         <div class="features-photo">
-                            <img class="container-img-left" src="img/funtome-features/005.png" alt="">
+                            <img class="container-img-left" src="img/funtome-features/desc/005.png"
+                                data-type="desc"
+                                alt="features"
+                            >
+                            <img class="container-img-left" src="img/funtome-features/desc/005.png"
+                                data-type="tablet"
+                                alt="features"
+                            >
+                            <img class="container-img-left" src="img/funtome-features/mobile/005-mob-min.png"
+                                data-type="mobile"
+                                alt="features"
+                            >
                         </div>
                         <div class="features-content">
                             <div class="features-title">
                                 <div class="number-photo">
-                                    <img class="number" src="img/funtome-features/05.png" alt="">
+                                    <img class="number" src="img/funtome-features/number/05.png" alt="">
                                 </div>
                                 <div class="title">Звуки</div>
                             </div>
@@ -242,7 +298,7 @@
                         <div class="features-content">
                             <div class="features-title">
                                 <div class="number-photo">
-                                    <img class="number" src="img/funtome-features/06.png" alt="">
+                                    <img class="number" src="img/funtome-features/number/06.png" alt="">
                                 </div>
                                 <div class="title">Коллажи</div>
                             </div>
@@ -255,19 +311,41 @@
                             </div>
                         </div>
                         <div class="features-photo">
-                            <img class="container-img-right" src="img/funtome-features/006.png" alt="">
+                            <img class="container-img-right" src="img/funtome-features/desc/006.png"
+                                data-type="desc"
+                                alt="features"
+                            >
+                            <img class="container-img-right" src="img/funtome-features/desc/006.png"
+                                data-type="tablet"
+                                alt="features"
+                            >
+                            <img class="container-img-right" src="img/funtome-features/mobile/006-mob-min.png"
+                                data-type="mobile"
+                                alt="features"
+                            >
                         </div>
                     </div>
 
                     <!--- Text Left -->
                     <div class="features-iteam">
                         <div class="features-photo">
-                            <img class="container-img-left" src="img/funtome-features/007.png" alt="">
+                            <img class="container-img-left" src="img/funtome-features/desc/007.png"
+                                data-type="desc"
+                                alt="features"
+                            >
+                            <img class="container-img-left" src="img/funtome-features/desc/007.png"
+                                data-type="tablet"
+                                alt="features"
+                            >
+                            <img class="container-img-left" src="img/funtome-features/mobile/007-mob-min.png"
+                                data-type="mobile"
+                                alt="features"
+                            >
                         </div>
                         <div class="features-content">
                             <div class="features-title">
                                 <div class="number-photo">
-                                    <img class="number" src="img/funtome-features/07.png" alt="">
+                                    <img class="number" src="img/funtome-features/number/07.png" alt="">
                                 </div>
                                 <div class="title">Волшебная палочка</div>
                             </div>
@@ -289,7 +367,7 @@
                         <div class="features-content">
                             <div class="features-title">
                                 <div class="number-photo">
-                                    <img class="number" src="img/funtome-features/08.png" alt="">
+                                    <img class="number" src="img/funtome-features/number/08.png" alt="">
                                 </div>
                                 <div class="title">Яйцесмайлы</div>
                             </div>
@@ -301,7 +379,18 @@
                             </div>
                         </div>
                         <div class="features-photo">
-                            <img class="container-img-right" src="img/funtome-features/008.png" alt="">
+                            <img class="container-img-right" src="img/funtome-features/desc/008.png"
+                                data-type="desc"
+                                alt="features"
+                            >
+                            <img class="container-img-right" src="img/funtome-features/desc/008.png"
+                                data-type="tablet"
+                                alt="features"
+                            >
+                            <img class="container-img-right" src="img/funtome-features/mobile/008-mob-min.png"
+                                data-type="mobile"
+                                alt="features"
+                            >
                         </div>
                     </div>
 
@@ -310,8 +399,8 @@
 
             <div class="container-center">
                 <div class="conditiuns">
-                    <a href="#" class="style-conditions mr50">Условия пользования</a>
-                    <a href="#" class="style-conditions">Политика конфиденциальности</a>
+                    <a href="#" class="style-conditions">Условия пользования</a>
+                    <a href="#" class="style-conditions-pol">Политика конфиденциальности</a>
                 </div>
             </div>
 
@@ -324,7 +413,7 @@
             <div class="container footer-container">
 
                 <div class="footer-funtome">
-                    <div class="footer-icon mr25">
+                    <div class="footer-icon">
                         <img class="icon-style" src="img/icon/funtome-footer.svg" alt="">
                     </div>
                     <div class="funtome-text">Funtome Messenger</div>
@@ -347,7 +436,7 @@
                     </div>
                 </div>
 
-                <div class="icon-social-footer">
+                <!-- <div class="icon-social-footer">
                     <a href="#" class="icon-footer mr30">
                         <img src="img/icon/inst.png" alt="">
                     </a>
@@ -360,7 +449,7 @@
                     <a href="#" class="icon-footer">
                         <img src="img/icon/youtube.png" alt="">
                     </a>
-                </div>
+                </div> -->
 
             </div>
         </div>
