--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/js/owlCarousel/owl.theme.default.css">
 
     <link rel="stylesheet" href="css/style.css" />
-    <!-- <link rel="stylesheet" href="css/media/media.css"> -->
+    <link rel="stylesheet" href="css/media.css">
 
 </head>
 
@@ -213,8 +213,8 @@
                 </div>
 
                 <div class="conditiuns">
-                    <a href="#" class="style-conditions mr50">Условия пользования</a>
-                    <a href="#" class="style-conditions">Политика конфиденциальности</a>
+                    <a href="#" class="style-conditions">Условия пользования</a>
+                    <a href="#" class="style-conditions-pol">Политика конфиденциальности</a>
                 </div>
             </div>
         </div> <!-- content-block end -->
@@ -225,7 +225,7 @@
             <div class="container footer-container">
 
                 <div class="footer-funtome">
-                    <div class="footer-icon mr25">
+                    <div class="footer-icon">
                         <img class="icon-style" src="img/icon/funtome-footer.svg" alt="">
                     </div>
                     <div class="funtome-text">Funtome Messenger</div>
