--- a/funtome_features.html
+++ b/funtome_features.html
@@ -33,7 +33,7 @@
                 <div class="header-inner">
                     <div class="header-logo">
                         <a href="/">
-                            <img class="logo" src="img/logo_funtome.svg" alt="" />
+                            <img class="logo" src="img/icon/logo_funtome.svg" alt="" />
                         </a>
                         <a class="local-switch" href="https://funtome.devzsg.net/en/">
                             en
