--- a/funtome_paki.html
+++ b/funtome_paki.html
@@ -30,10 +30,10 @@
                 <div class="header-inner">
                     <div class="header-logo">
                         <a href="/">
-                            <img class="logo" src="img/logo_funtome.svg" alt="" />
+                            <img class="logo" src="img/icon/logo_funtome.svg" alt="" />
                         </a>
-                        <a href="/">
-                            <img src="img/lang.svg" alt="" />
+                        <a class="local-switch" href="https://funtome.devzsg.net/en/">
+                            en
                         </a>
                     </div>
 
@@ -59,7 +59,7 @@
 
                     <div class="header-instal">
                         <a href="#"><img class="instal-apple" src="img/icon/apple_icon.png" alt="" /></a>
-                        <a href="#"><img class="instal-google" src="img/icon/google_icon.png" alt="" /></a>
+                        <a href="#"><img class="instal-google" src="img/icon/google_icon.svg" alt="" /></a>
                     </div>
                 </div>
             </div>
@@ -1077,8 +1077,8 @@
                 </div>
 
                 <div class="conditiuns">
-                    <a href="#" class="style-conditions mr50">Условия пользования</a>
-                    <a href="#" class="style-conditions">Политика конфиденциальности</a>
+                    <a href="#" class="style-conditions">Условия пользования</a>
+                    <a href="#" class="style-conditions-pol">Политика конфиденциальности</a>
                 </div>
             </div>
         </div> <!-- content-block end -->
@@ -1091,7 +1091,7 @@
 
             <div class="container footer-container">
                 <div class="footer-funtome">
-                    <div class="footer-icon mr25">
+                    <div class="footer-icon">
                         <img class="icon-style" src="img/icon/funtome-footer.svg" alt="">
                     </div>
                     <div class="funtome-text">Funtome Messenger</div>
