--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="header-inner">
                     <div class="header-logo">
                         <a href="/">
-                            <img class="logo" src="img/logo_funtome.svg" alt="" />
+                            <img class="logo" src="img/icon/logo_funtome.svg" alt="" />
                         </a>
                         <a class="local-switch" href="https://funtome.devzsg.net/en/">
                             en
@@ -96,9 +96,9 @@
                                 <img src="img/butt/butt_google.png" alt="">
                             </a>
                         </div>
-                    </div>
+                    </div>  
                     <div class="intro-photo">
-                        <img class="intro-photo-size" src="/img/intro_photo_group.png" alt="">
+                        <img class="intro-photo-size" src="/img/funtome-home/intro_photo_group.png" alt="">
                     </div>
                 </div>
 
@@ -131,7 +131,7 @@
                         <div class="owl-slider-1">
                             <div id="slider_1" class="owl-carousel owl-theme-1">
                                 <div class="slide">
-                                    <img class="photo-style" src="img/mouse.png" alt="">
+                                    <img class="photo-style" src="img/funtome-home/mouse.png" alt="">
                                     <div class="form-text">
                                         <p class="text-first">
                                             Встречайте <span class="green">анимированные</span> паки Funtome!
@@ -140,7 +140,7 @@
                                 </div>
 
                                 <div class="slide">
-                                    <img class="photo-style" src="img/mouse.png" alt="">
+                                    <img class="photo-style" src="img/funtome-home/mouse.png" alt="">
                                     <div class="form-text">
                                         <p class="text-first">
                                             Встречайте <span class="green">анимированные</span> паки Funtome!
@@ -149,7 +149,7 @@
                                 </div>
 
                                 <div class="slide">
-                                    <img class="photo-style" src="img/mouse.png" alt="">
+                                    <img class="photo-style" src="img/funtome-home/mouse.png" alt="">
                                     <div class="form-text">
                                         <p class="text-first">
                                             Встречайте <span class="green">анимированные</span> паки Funtome!
@@ -164,7 +164,7 @@
             </div> <!-- End Slider -->
 
             <section class="video">
-                <img src="img/video_photo.jpg" alt="">
+                <img src="img/funtome-home/video_photo.jpg" alt="">
             </section>
 
             <div class="container-center">
@@ -200,7 +200,7 @@
             </div>
 
             <section class="info-photo">
-                <img class="info-photo-size" src="img/info_photo.jpg" alt="">
+                <img class="info-photo-size" src="img/funtome-home/info_photo.jpg" alt="">
             </section>
 
             <div class="container-center">
