--- a/funtome_blog_str_1.html
+++ b/funtome_blog_str_1.html
@@ -31,10 +31,10 @@
             <div class="header-inner">
                 <div class="header-logo">
                     <a href="/">
-                        <img class="logo" src="img/logo_funtome_black.svg" alt=""/>
+                        <img class="logo" src="img/icon/logo_funtome_black.svg" alt=""/>
                     </a>
-                    <a href="/">
-                        <img src="img/lang_black.svg" alt=""/>
+                    <a class="local-switch black" href="https://funtome.devzsg.net/en/">
+                        en
                     </a>
                 </div>
 
@@ -477,8 +477,8 @@
             </div> <!-- section-comments end -->
 
             <div class="conditiuns">
-                <a href="#" class="style-conditions mr50">Условия пользования</a>
-                <a href="#" class="style-conditions">Политика конфиденциальности</a>
+                <a href="#" class="style-conditions">Условия пользования</a>
+                <a href="#" class="style-conditions-pol">Политика конфиденциальности</a>
             </div>
         </div> <!-- container end -->
     </div> <!-- content block -->
@@ -488,7 +488,7 @@
             <div class="container footer-container">
 
                 <div class="footer-funtome">
-                    <div class="footer-icon mr25">
+                    <div class="footer-icon">
                         <img class="icon-style" src="img/icon/funtome-footer.svg" alt="">
                     </div>
                     <div class="funtome-text">Funtome Messenger</div>
